PE2/ASSIGNMENT1/parser.output
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 52 conflicts: 13 shift/reduce
State 127 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt

    4 stmt: decl_stmt
    5     | if_stmt
    6     | do_while_stmt
    7     | while_stmt
    8     | for_stmt
    9     | switch_stmt
   10     | block
   11     | expr_stmt
   12     | BREAK ';'

   13 decl_stmt: type declarator_list ';'

   14 type: INT
   15     | FLOAT
   16     | CHAR
   17     | DOUBLE

   18 declarator_list: declarator
   19                | declarator_list ',' declarator

   20 declarator: ID
   21           | ID '=' expr
   22           | ID dim_list
   23           | ID dim_list '=' expr

   24 dim_list: '[' NUM ']'
   25         | dim_list '[' NUM ']'

   26 if_stmt: IF '(' expr ')' stmt
   27        | IF '(' expr ')' stmt ELSE stmt

   28 do_while_stmt: DO stmt WHILE '(' expr ')' ';'

   29 while_stmt: WHILE '(' expr ')' stmt

   30 for_stmt: FOR '(' for_init ';' for_cond ';' for_update ')' stmt

   31 for_init: ε
   32         | for_init_list

   33 for_init_list: for_init_item
   34              | for_init_list ',' for_init_item

   35 for_init_item: ID '=' expr
   36              | type ID '=' expr
   37              | type ID

   38 for_cond: ε
   39         | expr

   40 for_update: ε
   41           | for_update_list

   42 for_update_list: for_update_item
   43                | for_update_list ',' for_update_item

   44 for_update_item: ID INC
   45                | ID DEC
   46                | INC ID
   47                | DEC ID
   48                | ID ADDASSIGN expr
   49                | ID SUBASSIGN expr
   50                | ID '=' expr

   51 switch_stmt: SWITCH '(' expr ')' '{' case_list '}'

   52 case_list: ε
   53          | case_list case_clause

   54 case_clause: CASE NUM ':' stmt_list
   55            | CASE ID ':' stmt_list
   56            | DEFAULT ':' stmt_list

   57 block: '{' stmt_list '}'

   58 expr_stmt: ID '=' expr ';'
   59          | ID ADDASSIGN expr ';'
   60          | ID SUBASSIGN expr ';'
   61          | ID INC ';'
   62          | ID DEC ';'
   63          | expr ';'

   64 expr: expr '+' expr
   65     | expr '-' expr
   66     | expr '*' expr
   67     | expr '/' expr
   68     | expr '%' expr
   69     | expr EQ expr
   70     | expr NEQ expr
   71     | expr LT expr
   72     | expr GT expr
   73     | expr LE expr
   74     | expr GE expr
   75     | expr AND expr
   76     | expr OR expr
   77     | '-' expr
   78     | '!' expr
   79     | ID INC
   80     | ID DEC
   81     | INC ID
   82     | DEC ID
   83     | ID index_list
   84     | '(' expr ')'
   85     | ID
   86     | NUM

   87 index_list: '[' expr ']'
   88           | index_list '[' expr ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 78
    '%' (37) 68
    '(' (40) 26 27 28 29 30 51 84
    ')' (41) 26 27 28 29 30 51 84
    '*' (42) 66
    '+' (43) 64
    ',' (44) 19 34 43
    '-' (45) 65 77
    '/' (47) 67
    ':' (58) 54 55 56
    ';' (59) 12 13 28 30 58 59 60 61 62 63
    '=' (61) 21 23 35 36 50 58
    '[' (91) 24 25 87 88
    ']' (93) 24 25 87 88
    '{' (123) 51 57
    '}' (125) 51 57
    error (256)
    ID <str> (258) 20 21 22 23 35 36 37 44 45 46 47 48 49 50 55 58 59 60 61 62 79 80 81 82 83 85
    NUM <str> (259) 24 25 54 86
    INT (260) 14
    FLOAT (261) 15
    CHAR (262) 16
    DOUBLE (263) 17
    IF (264) 26 27
    ELSE (265) 27
    DO (266) 28
    WHILE (267) 28 29
    FOR (268) 30
    SWITCH (269) 51
    CASE (270) 54 55
    DEFAULT (271) 56
    BREAK (272) 12
    INC (273) 44 46 61 79 81
    DEC (274) 45 47 62 80 82
    ADDASSIGN (275) 48 59
    SUBASSIGN (276) 49 60
    EQ (277) 69
    NEQ (278) 70
    LE (279) 73
    GE (280) 74
    LT (281) 71
    GT (282) 72
    AND (283) 75
    OR (284) 76
    UMINUS (285)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program (48)
        on left: 1
        on right: 0
    stmt_list (49)
        on left: 2 3
        on right: 1 3 54 55 56 57
    stmt (50)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 3 26 27 28 29 30
    decl_stmt (51)
        on left: 13
        on right: 4
    type (52)
        on left: 14 15 16 17
        on right: 13 36 37
    declarator_list (53)
        on left: 18 19
        on right: 13 19
    declarator (54)
        on left: 20 21 22 23
        on right: 18 19
    dim_list (55)
        on left: 24 25
        on right: 22 23 25
    if_stmt (56)
        on left: 26 27
        on right: 5
    do_while_stmt (57)
        on left: 28
        on right: 6
    while_stmt (58)
        on left: 29
        on right: 7
    for_stmt (59)
        on left: 30
        on right: 8
    for_init (60)
        on left: 31 32
        on right: 30
    for_init_list (61)
        on left: 33 34
        on right: 32 34
    for_init_item (62)
        on left: 35 36 37
        on right: 33 34
    for_cond (63)
        on left: 38 39
        on right: 30
    for_update (64)
        on left: 40 41
        on right: 30
    for_update_list (65)
        on left: 42 43
        on right: 41 43
    for_update_item (66)
        on left: 44 45 46 47 48 49 50
        on right: 42 43
    switch_stmt (67)
        on left: 51
        on right: 9
    case_list (68)
        on left: 52 53
        on right: 51 53
    case_clause (69)
        on left: 54 55 56
        on right: 53
    block (70)
        on left: 57
        on right: 10
    expr_stmt (71)
        on left: 58 59 60 61 62 63
        on right: 11
    expr (72)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 21 23 26 27 28 29 35 36 39 48 49 50 51 58 59 60 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 84 87 88
    index_list (73)
        on left: 87 88
        on right: 83 88


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    WHILE   shift, and go to state 12
    FOR     shift, and go to state 13
    SWITCH  shift, and go to state 14
    BREAK   shift, and go to state 15
    INC     shift, and go to state 16
    DEC     shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19
    '{'     shift, and go to state 20
    '!'     shift, and go to state 21

    $default  reduce using rule 1 (program)

    stmt           go to state 22
    decl_stmt      go to state 23
    type           go to state 24
    if_stmt        go to state 25
    do_while_stmt  go to state 26
    while_stmt     go to state 27
    for_stmt       go to state 28
    switch_stmt    go to state 29
    block          go to state 30
    expr_stmt      go to state 31
    expr           go to state 32


State 3

    0 $accept: program $end •

    $default  accept


State 4

   58 expr_stmt: ID • '=' expr ';'
   59          | ID • ADDASSIGN expr ';'
   60          | ID • SUBASSIGN expr ';'
   61          | ID • INC ';'
   62          | ID • DEC ';'
   79 expr: ID • INC
   80     | ID • DEC
   83     | ID • index_list
   85     | ID •

    INC        shift, and go to state 33
    DEC        shift, and go to state 34
    ADDASSIGN  shift, and go to state 35
    SUBASSIGN  shift, and go to state 36
    '='        shift, and go to state 37
    '['        shift, and go to state 38

    $default  reduce using rule 85 (expr)

    index_list  go to state 39


State 5

   86 expr: NUM •

    $default  reduce using rule 86 (expr)


State 6

   14 type: INT •

    $default  reduce using rule 14 (type)


State 7

   15 type: FLOAT •

    $default  reduce using rule 15 (type)


State 8

   16 type: CHAR •

    $default  reduce using rule 16 (type)


State 9

   17 type: DOUBLE •

    $default  reduce using rule 17 (type)


State 10

   26 if_stmt: IF • '(' expr ')' stmt
   27        | IF • '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 40


State 11

   28 do_while_stmt: DO • stmt WHILE '(' expr ')' ';'

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    WHILE   shift, and go to state 12
    FOR     shift, and go to state 13
    SWITCH  shift, and go to state 14
    BREAK   shift, and go to state 15
    INC     shift, and go to state 16
    DEC     shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19
    '{'     shift, and go to state 20
    '!'     shift, and go to state 21

    stmt           go to state 41
    decl_stmt      go to state 23
    type           go to state 24
    if_stmt        go to state 25
    do_while_stmt  go to state 26
    while_stmt     go to state 27
    for_stmt       go to state 28
    switch_stmt    go to state 29
    block          go to state 30
    expr_stmt      go to state 31
    expr           go to state 32


State 12

   29 while_stmt: WHILE • '(' expr ')' stmt

    '('  shift, and go to state 42


State 13

   30 for_stmt: FOR • '(' for_init ';' for_cond ';' for_update ')' stmt

    '('  shift, and go to state 43


State 14

   51 switch_stmt: SWITCH • '(' expr ')' '{' case_list '}'

    '('  shift, and go to state 44


State 15

   12 stmt: BREAK • ';'

    ';'  shift, and go to state 45


State 16

   81 expr: INC • ID

    ID  shift, and go to state 46


State 17

   82 expr: DEC • ID

    ID  shift, and go to state 47


State 18

   77 expr: '-' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 49


State 19

   84 expr: '(' • expr ')'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 50


State 20

   57 block: '{' • stmt_list '}'

    $default  reduce using rule 2 (stmt_list)

    stmt_list  go to state 51


State 21

   78 expr: '!' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 52


State 22

    3 stmt_list: stmt_list stmt •

    $default  reduce using rule 3 (stmt_list)


State 23

    4 stmt: decl_stmt •

    $default  reduce using rule 4 (stmt)


State 24

   13 decl_stmt: type • declarator_list ';'

    ID  shift, and go to state 53

    declarator_list  go to state 54
    declarator       go to state 55


State 25

    5 stmt: if_stmt •

    $default  reduce using rule 5 (stmt)


State 26

    6 stmt: do_while_stmt •

    $default  reduce using rule 6 (stmt)


State 27

    7 stmt: while_stmt •

    $default  reduce using rule 7 (stmt)


State 28

    8 stmt: for_stmt •

    $default  reduce using rule 8 (stmt)


State 29

    9 stmt: switch_stmt •

    $default  reduce using rule 9 (stmt)


State 30

   10 stmt: block •

    $default  reduce using rule 10 (stmt)


State 31

   11 stmt: expr_stmt •

    $default  reduce using rule 11 (stmt)


State 32

   63 expr_stmt: expr • ';'
   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr

    EQ   shift, and go to state 56
    NEQ  shift, and go to state 57
    LE   shift, and go to state 58
    GE   shift, and go to state 59
    LT   shift, and go to state 60
    GT   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
    ';'  shift, and go to state 69


State 33

   61 expr_stmt: ID INC • ';'
   79 expr: ID INC •

    ';'  shift, and go to state 70

    ';'       [reduce using rule 79 (expr)]
    $default  reduce using rule 79 (expr)


State 34

   62 expr_stmt: ID DEC • ';'
   80 expr: ID DEC •

    ';'  shift, and go to state 71

    ';'       [reduce using rule 80 (expr)]
    $default  reduce using rule 80 (expr)


State 35

   59 expr_stmt: ID ADDASSIGN • expr ';'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 72


State 36

   60 expr_stmt: ID SUBASSIGN • expr ';'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 73


State 37

   58 expr_stmt: ID '=' • expr ';'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 74


State 38

   87 index_list: '[' • expr ']'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 75


State 39

   83 expr: ID index_list •
   88 index_list: index_list • '[' expr ']'

    '['  shift, and go to state 76

    $default  reduce using rule 83 (expr)


State 40

   26 if_stmt: IF '(' • expr ')' stmt
   27        | IF '(' • expr ')' stmt ELSE stmt

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 77


State 41

   28 do_while_stmt: DO stmt • WHILE '(' expr ')' ';'

    WHILE  shift, and go to state 78


State 42

   29 while_stmt: WHILE '(' • expr ')' stmt

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 79


State 43

   30 for_stmt: FOR '(' • for_init ';' for_cond ';' for_update ')' stmt

    ID      shift, and go to state 80
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9

    $default  reduce using rule 31 (for_init)

    type           go to state 81
    for_init       go to state 82
    for_init_list  go to state 83
    for_init_item  go to state 84


State 44

   51 switch_stmt: SWITCH '(' • expr ')' '{' case_list '}'

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 85


State 45

   12 stmt: BREAK ';' •

    $default  reduce using rule 12 (stmt)


State 46

   81 expr: INC ID •

    $default  reduce using rule 81 (expr)


State 47

   82 expr: DEC ID •

    $default  reduce using rule 82 (expr)


State 48

   79 expr: ID • INC
   80     | ID • DEC
   83     | ID • index_list
   85     | ID •

    INC  shift, and go to state 86
    DEC  shift, and go to state 87
    '['  shift, and go to state 38

    $default  reduce using rule 85 (expr)

    index_list  go to state 39


State 49

   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr
   77     | '-' expr •

    $default  reduce using rule 77 (expr)


State 50

   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr
   84     | '(' expr • ')'

    EQ   shift, and go to state 56
    NEQ  shift, and go to state 57
    LE   shift, and go to state 58
    GE   shift, and go to state 59
    LT   shift, and go to state 60
    GT   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
    ')'  shift, and go to state 88


State 51

    3 stmt_list: stmt_list • stmt
   57 block: '{' stmt_list • '}'

    ID      shift, and go to state 4
    NUM     shift, and go to state 5
    INT     shift, and go to state 6
    FLOAT   shift, and go to state 7
    CHAR    shift, and go to state 8
    DOUBLE  shift, and go to state 9
    IF      shift, and go to state 10
    DO      shift, and go to state 11
    WHILE   shift, and go to state 12
    FOR     shift, and go to state 13
    SWITCH  shift, and go to state 14
    BREAK   shift, and go to state 15
    INC     shift, and go to state 16
    DEC     shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19
    '{'     shift, and go to state 20
    '}'     shift, and go to state 89
    '!'     shift, and go to state 21

    stmt           go to state 22
    decl_stmt      go to state 23
    type           go to state 24
    if_stmt        go to state 25
    do_while_stmt  go to state 26
    while_stmt     go to state 27
    for_stmt       go to state 28
    switch_stmt    go to state 29
    block          go to state 30
    expr_stmt      go to state 31
    expr           go to state 32


State 52

   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr
   78     | '!' expr •

    EQ   shift, and go to state 56
    NEQ  shift, and go to state 57
    LE   shift, and go to state 58
    GE   shift, and go to state 59
    LT   shift, and go to state 60
    GT   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68

    EQ        [reduce using rule 78 (expr)]
    NEQ       [reduce using rule 78 (expr)]
    LE        [reduce using rule 78 (expr)]
    GE        [reduce using rule 78 (expr)]
    LT        [reduce using rule 78 (expr)]
    GT        [reduce using rule 78 (expr)]
    AND       [reduce using rule 78 (expr)]
    OR        [reduce using rule 78 (expr)]
    '+'       [reduce using rule 78 (expr)]
    '-'       [reduce using rule 78 (expr)]
    '*'       [reduce using rule 78 (expr)]
    '/'       [reduce using rule 78 (expr)]
    '%'       [reduce using rule 78 (expr)]
    $default  reduce using rule 78 (expr)


State 53

   20 declarator: ID •
   21           | ID • '=' expr
   22           | ID • dim_list
   23           | ID • dim_list '=' expr

    '='  shift, and go to state 90
    '['  shift, and go to state 91

    $default  reduce using rule 20 (declarator)

    dim_list  go to state 92


State 54

   13 decl_stmt: type declarator_list • ';'
   19 declarator_list: declarator_list • ',' declarator

    ';'  shift, and go to state 93
    ','  shift, and go to state 94


State 55

   18 declarator_list: declarator •

    $default  reduce using rule 18 (declarator_list)


State 56

   69 expr: expr EQ • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 95


State 57

   70 expr: expr NEQ • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 96


State 58

   73 expr: expr LE • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 97


State 59

   74 expr: expr GE • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 98


State 60

   71 expr: expr LT • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 99


State 61

   72 expr: expr GT • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 100


State 62

   75 expr: expr AND • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 101


State 63

   76 expr: expr OR • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 102


State 64

   64 expr: expr '+' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 103


State 65

   65 expr: expr '-' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 104


State 66

   66 expr: expr '*' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 105


State 67

   67 expr: expr '/' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 106


State 68

   68 expr: expr '%' • expr

    ID   shift, and go to state 48
    NUM  shift, and go to state 5
    INC  shift, and go to state 16
    DEC  shift, and go to state 17
    '-'  shift, and go to state 18
    '('  shift, and go to state 19
    '!'  shift, and go to state 21

    expr  go to state 107


State 69

   63 expr_stmt: expr ';' •

    $default  reduce using rule 63 (expr_stmt)


State 70

   61 expr_stmt: ID INC ';' •

    $default  reduce using rule 61 (expr_stmt)


State 71

   62 expr_stmt: ID DEC ';' •

    $default  reduce using rule 62 (expr_stmt)


State 72

   59 expr_stmt: ID ADDASSIGN expr • ';'
   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr

    EQ   shift, and go to state 56
    NEQ  shift, and go to state 57
    LE   shift, and go to state 58
    GE   shift, and go to state 59
    LT   shift, and go to state 60
    GT   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
    ';'  shift, and go to state 108


State 73

   60 expr_stmt: ID SUBASSIGN expr • ';'
   64 expr: expr • '+' expr
   65     | expr • '-' expr
   66     | expr • '*' expr
   67     | expr • '/' expr
   68     | expr • '%' expr
   69     | expr • EQ expr
   70     | expr • NEQ expr
   71     | expr • LT expr
   72     | expr • GT expr
   73     | expr • LE expr
   74     | expr • GE expr
   75     | expr • AND expr
   76     | expr • OR expr

    EQ   shift, and go to state 56
    NEQ  shift, and go to state 57
    LE   shift, and go to state 58
    GE   shift, and go to state 59
    LT   shift, and go to state 60
    GT   shift, and go to state 61
    AND  shift, and go to state 62
    OR   shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '%'  shift, and go to state 68
    ';'  shift, and go to state 109


State 74
